# llmv3

./: .gitignore  Dockerfile.consumer  README.md  docker-compose.yml  main.py  pyproject.toml
scripts/: run_apps.py  run_feeder.py
src/llmv3/: consumer_http.py  main.py
