[project]
name = "llmv3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
llmv3 = "llmv3.main:main"
fastapi_feeder = "fastapi_feeder.main:serve"

[tool.uv.sources]
fastapi_feeder = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]

[build-system]
requires = ["uv_build>=0.11.2,<0.12"]
build-backend = "uv_build"
